# 2TTS

./: .gitignore  README.md
app/: 2tts.spec  LICENSE.txt  build.bat  main.py  requirements.txt  version_info.txt
app/core/: config.py  models.py
app/dist_installer/: latest.json
app/docs/: USER_GUIDE.md
app/installer/: 2TTS.iss
app/resources/: generate_icon.py
app/scripts/: build_release.py
app/services/: analytics.py  async_elevenlabs.py  audio.py  audio_processor.py  command_manager.py  elevenlabs.py  file_import.py  language.py  localization.py  logger.py  pause_preprocessor.py  preset_manager.py  processing.py  transcription.py  updater.py  voice_matcher.py
app/tests/: __init__.py  conftest.py  test_api.py  test_processing.py
app/ui/: dialogs.py  icons.py  main_window.py  new_dialogs.py  styles.py  transcribe_tab.py  widgets.py  workers.py
backend/: backend.spec  main.py  requirements.txt
backend/ipc/: __init__.py  handlers.py  server.py  types.py
backend/migration/: __init__.py  runner.py
desktop/: .eslintrc.cjs  .gitignore  build.bat  index.html  package-lock.json  package.json  release.ps1  tailwind.config.js  vite.config.ts
desktop/scripts/: build-sidecar.py  build.bat  copy-sidecar.js  dev.bat
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs
desktop/src/components/: AudioProcessingDialog.tsx  ConfirmDialog.tsx  DropZone.tsx  ErrorScreen.tsx  Layout.tsx  LineTable.tsx  ProcessingControls.tsx  Sidebar.tsx  SplashScreen.tsx  (+5 more)
(+12 files in other folders)
